k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ultimate-mahjong-connect
  labels:
    name: ultimate-mahjong-connect
    app: ultimate-mahjong-connect
